# mercury-ai

./: .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
app/: main.py
mercury/core/modules/data/: dimensionality_reduction.py
mercury/core/modules/document_store/: loader.py
mercury/core/modules/hermes/: chains.py  postprocessing.py
mercury/core/modules/llm/: llms.py  raptor.py
mercury/core/utils/: misc.py
public/: global.css
