[tool.poetry]
name = "mercury-3"
version = "0.1.0"
description = ""
authors = ["Thomas Marshall <marshallthomasm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.0.505"
langchain-core = "^0.1.46"
langchain = "^0.1.16"
langchain-openai = "^0.1.4"
langchain-community = "^0.0.34"
pypdf = "^4.2.0"
chromadb = "^0.5.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
